--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -45,18 +45,7 @@ body{
     color: #0d48a6;
 }
 /* Thanh tìm kiếm */
-.container-search{
-    width: 990px;
-    height: 60px;
-}
-.search{
-    position: absolute;
-    display: flex;
-    width: 45%;
-    height: 4%;
-    border: solid 0.5px rgb(224, 224, 224);
-    border-radius: 10px;
-}
+
 .icon-search{
     padding-top: 1%;
     padding-left: 3%;
@@ -78,62 +67,118 @@ body{
     text-align: center;
     color: #1670ff;
     font-size: 115%;
-    padding-top: 1.5%;
+    padding-top: 1%;
 }
-/*shortcut */
 .middle-container{
+    position: absolute;
     display: flex;
+    width: 70%;
+    height: 4%;
+    margin-top: 15px;
+}
+.search{
+    display: flex;
+    width: 60%;
+    border: solid 0.5px rgb(224, 224, 224);
+    border-radius: 10px;
 }
 .menu-shortcut{
     display: flex;
-    height: 30px;
+    margin-left: 8%;
 }
 .shortcut-home{
+    border: solid 0px;
+    border-radius: 10px;
     display: flex;
     width: 150px;
     padding: 2%;
     margin-left: 10%;
-    margin-top: 1%;
+}
+.shortcut-home:hover{
+    background-color: #e0ecff;
 }
 .icon-home{
-    margin-top: 2%;
+    color: #0071ff;
 }
 .link-shortcut-home{
+    color: #0071ff;
     text-align: justify;
-    color: rgb(167, 166, 166);
     text-decoration: none;
     margin-left: 10%;
-    margin-top: 5%;
     font-size: 110%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .shortcut-user{
     display: flex;
-    width: 150px;
+    border: solid 0px;
+    border-radius: 10px;
+    width: 140px;
     padding: 2%;
+}
+.shortcut-user:hover{
+    background-color: #e5e5e5;
 }
 .link-shortcut-user{
     text-align: justify;
     color: rgb(167, 166, 166);
     text-decoration: none;
     margin-left: 10%;
-    margin-top: 10%;
     font-size: 110%;
-}
-.icon-user{
-    margin-top: 2%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 .shortcut-shoppingcart{
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-top: 1%;;
+    padding-left: 5px;
+    height: 90%;
     display: flex;
 }
+.shortcut-shoppingcart:hover{
+    background-color: #e0ecff;
+}
 .icon-card{
-    margin-top: 26%;
+    width: 90%;
 }
 .number{
+    display: flex;
     background-color: red;
     border:5px solid red ;
     border-radius: 200px;
     width: 3%;
     height: 10%;
+}
+/*bottom header*/
+.bottom-container{
+    position: absolute;
+    display: flex;
+    margin-top: 3.5%;
+    width: 90%;
+}
+.list-recommend{
+    width: 200%;
+    height: 5%;
+}
+.location{
+    display: flex;
+    width: 200%;
+    padding-left: 10%;
+}
+.link-recommend{
+    text-decoration: none;
+    color: gray;
+    font-family:  Arial, Helvetica, sans-serif;
+    font-size: 90%;
+    padding-left: 1%;
+    height: 30px;
+}
+.img-location{
+    width:30px;
+    height: 25px;
+    text-decoration: underline;
+}
+.text-location{
+    color: gray;
 }
 /* foooter*/
 footer{
@@ -144,40 +189,4 @@ footer{
 }
 .icon-connect{
     width: 8%;
-}
-/*bottom header*/
-.bottom-container{
-    margin-top: 1%;
-    display: flex;
-    height: 20px;
-}
-.list-recommend{
-    position: absolute;
-    display: flex;
-    width: 50%;
-}
-.link-recommend{
-    text-decoration: none;
-    color: gray;
-    font-family:  Arial, Helvetica, sans-serif;
-    font-size: 90%;
-    padding-left: 1%;
-}
-.location{
-    position: fixed;
-    display: flex;
-    width: 20%;
-    height: 30px;
-}
-.img-location{
-    width: 6.5%;
-    height: 80%;
-    margin-top: 5%;
-    text-decoration: underline;
-}
-.address{
-    padding-top: 6%;
-}
-.text-location{
-    color: gray;
 }
