--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -44,6 +44,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: #0d48a6;
 }
+
 /* Thanh tìm kiếm */
 
 .icon-search{
@@ -159,11 +160,6 @@ body{
     width: 200%;
     height: 5%;
 }
-.location{
-    display: flex;
-    width: 200%;
-    padding-left: 10%;
-}
 .link-recommend{
     text-decoration: none;
     color: gray;
@@ -172,13 +168,23 @@ body{
     padding-left: 1%;
     height: 30px;
 }
+.location{
+    display: flex;
+    width: 200%;
+    padding-left: 10%;
+    color: black;
+}
 .img-location{
     width:30px;
     height: 25px;
     text-decoration: underline;
+    color: black;
 }
 .text-location{
     color: gray;
+}
+.link-address{
+    color: black;
 }
 /* foooter*/
 footer{
