--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -46,7 +46,9 @@ body{
 }
 
 /* Thanh tìm kiếm */
-
+.container-search{
+    width: 90%;
+}
 .icon-search{
     padding-top: 1%;
     padding-left: 3%;
@@ -206,17 +208,61 @@ body{
 /* foooter*/
 .style-footer{
     display: flex;
-    width: 75%;
-    float: right;
+}
+.style1{
+    border: dotted;
+    display: flex;
+    width: 60%;
+}
+.std-hotline{
+    color: black;
 }
 .block{
-    border: solid 1px;
-    width: 17%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+    width: 12%;
+    margin-left: 2%;
+    background-color: red;
 }
-.logo-connect{
-    width: 3%;
+.text-block{
+    font-size: 130%;
+}
+.list-link {
+    border: dotted;
+    height: 150%;
+    color: gray;
+    text-decoration: none;
+    background-color: yellow;
+}
+.email-hotline{
+    text-decoration: none;
+    color: gray;
 }
 .icon-connect{
     width: 8%;
 }
-
+.img-tikinow{
+    width: 50%;
+}
+.logo-contact{
+    display: flex;
+}
+.list-logo1{
+    width: 40%;
+}
+.list-logo2{
+    width: 250%;
+    margin-left: -80px;
+}
+.list-logo3{
+    width: 50%;
+}
+.icon-install{
+    display: flex;
+}
+.logo-connect{
+    width: 14%;
+}
+.icon-connect{
+    width: 80%;
+}
