--- a/Tiki.vn/Home/CSS/footer.css
+++ b/Tiki.vn/Home/CSS/footer.css
@@ -1,23 +1,34 @@
 .footer-after{
     box-sizing: border-box;
     border: solid 1px white;
+    font-family: Inter, Helvetica, Arial, sans-serif;
+    margin-left: 21%;
 }
+
 .hidden-block{
-    margin-left: auto;
-    margin-right: auto;
-    width: 1240px;
+    margin-left: 0px;
+    margin-right: 0px;
     background-color: white;
-    float: left;
-    display: flex;
+    width: 80%;
+   
 }
 
 .separator{
     border-bottom: 1px solid #e0e0e0;
     margin:0 0 ;
+    width: 1100px;
     padding-bottom: 14px;
 }
+
+.hidden-block a{
+    font-size: 13px;
+    line-height: 14px;
+    text-decoration: none;
+    max-width: fit-content; 
+}
+
 .hidden-block span{
-    font-size: 12px;
+    font-size: 13px;
     line-height: 16px;
     color: rgb(128,128,137);
 }
@@ -27,16 +38,99 @@
     margin: 0px 0px 10px;
     color: rgb(128,128,137);
 }
+
+.address h1{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    color: rgb(56, 56, 61);
+    margin-bottom: 12px;
+    margin-top: 0px;
+
+}
+
+.slogan h2{
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 500;
+    margin-bottom: 4px;
+    margin-top: 0px;
+    color: rgb(128, 128, 137);
+}
+
+.slogan h1{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    color: rgb(56, 56, 61);
+    margin-bottom: 12px;
+    margin-top: 0px;
+}
+
+.prominent-brand h2{
+   font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    color: rgb(56, 56, 61);
+    margin-bottom: 12px;
+    margin-top: 0px;
+}
+
+
 .hidden-block .changes-color a{
     font-size: 12px;
     color:rgb(128,128,137);
 }
 
-.hidden-block a{
-    font-size: 12px;
-    line-height: 16px;
-}
 
 .slogan{
     margin-bottom: 0px 0px 10px;
+}
+
+.create-product-column{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    column-gap: 20px;
+    width: fit-content;
+}
+
+.product-catalog h2{
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    color: rgb(56, 56, 61);
+    margin-bottom: 12px;
+    margin-top: 0px;
+}
+
+ .types-of-products a{
+    font-size: 12px;
+    line-height: 16px;
+    color: rgb(128, 128, 137);
+    margin-bottom: 12px;
+    margin-top: 0px;
+}
+
+.title-product a{
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: rgb(128, 128, 137);
+}
+
+.product-block {
+    margin-bottom: 14px;
+    margin-top: 0px;
+}
+
+.title-product p{
+    font-size: 14px;
+    line-height: 2px;
+    font-weight: 500;
+    color: rgb(128, 128, 137);
+    margin: auto;
+}
+
+.product-column{
+    width: fit-content;
 }
