--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -67,6 +67,7 @@ body{
     text-align: center;
     padding-left: 2.5%;
 }
+
 .link-search{  /*dinh dang text cua nut search */
     text-decoration: none;
     text-align: center;
@@ -229,27 +230,25 @@ main{
     padding: 1%;
     
 }
-.side{
-    display: flex;
-}
 .main-display{
     background-color: aquamarine;
 }
-/* .list-slide{
+.side{
+    width: 110px;
+    height: 300px;
     display: flex;
-    width: 50%;
-    height: 70%;
-    background-color: #16b365;
-} */
+}
 .img-slide{
-    width: 49%;
+    width: 550px;
+    height: 300px;
     border-radius: 3%; 
-    margin-left: 1%;
+    margin-left: 2%;
 }
 .slide-items{
     display: flex;
-    padding: 2%;
-    background-color: white;
+    height: 300px;
+    border: dotted;
+    background-color: rgb(243, 0, 0);
     border-radius: 20px;
 }
 .list-event{
@@ -275,57 +274,117 @@ main{
     font-size: 90%;
     font-family: Arial, Helvetica, sans-serif;
 }
-/* muc top-deal */
-.text-top-deal{
+.text-top-deal{/* muc top-deal */
     left: 0;
     color: #db424d;
 }
 .list-top-deal{
     border: dotted;
-    background-color: #554142;
-    height: 500px;
+    background-color: white;
+    border-radius: 15px;
+    height: 400px;
     margin-top: 2%;
     padding: 1%;
 }
-.header-top-deal{
-    background-color: #16b365;
-}
 .list-box{
-    margin-top: 2%;
+    display: flex;
+    margin-top: 1%;
 }
 .box{
-    background-color: cadetblue;
-    border: dotted;
-    width: 19%;
-    height: 410px;
+    background-color: white;
+    margin-left: 0.5%;
+    border: solid 0.5px #dadada;
+    border-radius: 5%;
+    width: 180px;
+    height: 350px;
+}
+.link-box-item{
+    text-decoration: none;
 }
 .img-of-box{
-    float: left;
-    background-color: red;
-    height: 45%;
+    height: 49%;
+}
+.div-info{
+    height: 50%;
+    margin-left: 2%;
+}
+.icon-star-feedback{
+    display: flex;
+}
+.icon-star-rate{
+    width: 15px;
+}
+.info-item{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+    height: 65px;
+}
+.description-item{
+    height: 100%;
+    display: -webkit-box;
+    max-height: 3.2rem;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 2;
+    line-height: 1.6rem;
+}
+.cost-item{
+    height: 35%;
+    margin-top: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.sale-off-item{
+    background-color: rgb(241, 241, 241);
+    border-radius: 5px;
+    font-size: 90%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: black;
+}
+.cost-item-after{
+    color: #ff5762;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.cost-item-before{
+    font-size: 85%;
+    color: #acaaaa;
 }
 .some-img-of-box{
+    border-radius: 10px;
     position: absolute;
-    float: left;
-    width: 11%;
+    width: 175px;
+    height: 171px;
 }
 .info-of-box{
-    position: absolute;
-    background-color: yellow;
-}
-.now-of-box{
-    background-color: red;
     position: absolute;
 }
 .img-top-deal{
     width: 20%;
-    background-color: yellow;
 }.link-top-deal{
     color: #0071ff;
+    margin-top: 1%;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 90%;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     float: right;
+}
+.logo-now{
+    display: flex;
+    margin-left: 1%;
+}
+hr{
+    color: rgb(247, 247, 247);
+}
+.img-logo-now{
+    width: 35px;
+}
+.text-logo-now{
+    font-size: 75%;
+    font-size: 70%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: grey;
+    margin-top: 3%;
 }
 .plash-sale{
 
@@ -344,8 +403,7 @@ main{
 }
 .recommend-today{
 }
-/* foooter*/
-.style-footer{
+.style-footer{/* foooter*/
     display: flex;
     background-color: white;
     margin-top:1.5%;
