--- a/Tiki.vn/Home/CSS/giohang.css
+++ b/Tiki.vn/Home/CSS/giohang.css
@@ -1,18 +1,28 @@
-.shortcut-shoppingcart {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+.box-shopping-cart{
+    background-color: #f7f7f7;
+
+}
+
+.content-shopping-cart {
+    margin-left: 3%;
+    font-family:  Helvetica, Arial, sans-serif;
+    background-color: #f7f7f7;
+}
+
+.content-shopping-cart h1{
+    padding-top: 20px;
+    margin-top: 0px;
+    font-size: 20px;
+    font-weight: 550;
+    line-height: 28px;
 }
 
 .fix-cart {
     font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: left;
     align-items: center;
-    height: 70vh;
-    width: 70vw;   
-    padding: 10px;
-     
+    height: 92%;
+    width: 92%;   
+    padding: 1px;
     background-color: #f7f7f7;
 }
 
@@ -24,13 +34,27 @@
     height: 100%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-h3 {
-    font-size: 24px;
-    color: #333;
-    margin-bottom: 10px;
+
+.box-shopping-cart h2{
+    margin-top: 10px;
 }
 
-p {
+.cart-container h3{
     font-size: 16px;
+    color: #333;
+    margin-bottom: 10px;
+    margin: 12px 0px 2px;
+}
+
+.cart-container p {
+    font-size: 14px;
     color: #666;
+    font-weight: 400;
+    line-height: 150%;
+    padding-bottom: 20px;
+}
+
+.cart-container img{
+    width: 160px;
+    height: 160px;
 }
