--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -34,7 +34,7 @@ body{
     position: relative;
     width: 8%;
     text-align: center;
-    margin-left: 16%;
+    margin-left: 13%;
 }
 .home-logo #logo{  /* dinh dang kich thuoc cua logo home*/
     width: 85%;
@@ -43,11 +43,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: #0d48a6;
 }
-
 /* Thanh tìm kiếm */
 .container-search{
     width: 80%;
-    height: 90%;
 }
 .icon-search{     /* kich thuoc icon search */
     padding-top: 1%;
@@ -67,7 +65,6 @@ body{
     text-align: center;
     padding-left: 2.5%;
 }
-
 .link-search{  /*dinh dang text cua nut search */
     text-decoration: none;
     text-align: center;
@@ -80,13 +77,13 @@ body{
     margin-left: 1%;
     position: absolute;
     display: flex;
-    width: 69%;
+    width: 70%;
     height: 4%;
     margin-top: 15px;
 }
 .search{ /*chieu dai cua thanh tim kiem*/
     display: flex;
-    width: 68%;
+    width: 66%;
     height: 120%;
     border: solid 0.5px rgb(224, 224, 224);
     border-radius: 10px;
@@ -166,29 +163,31 @@ body{
     position: absolute;
     display: flex;
     margin-top: 3.5%;
-    width: 90%;
+    width: 100%;
 }
 .list-recommend{
-    width: 200%;
+    width: 60%;
     height: 5%;
 }
 .link-recommend{
+    width: 60%;
+    height: 30px;
     text-decoration: none;
     color: gray;
     font-family:  Arial, Helvetica, sans-serif;
     font-size: 90%;
     padding-left: 1%;
-    height: 30px;
 }
 .location{
     display: flex;
-    width: 200%;
-    padding-left: 10%;
+    width: 500px;
+    height: 40px;
+    margin-left: 20%;
     color: black;
 }
 .img-location{
-    width:30px;
-    height: 25px;
+    width:22px;
+    height: 22px;
     text-decoration: underline;
     color: black;
 }
@@ -196,6 +195,8 @@ body{
     color: gray;
 }
 .link-address{
+    font-size: 90%;
+    font-family: Arial, Helvetica, sans-serif;
     color: black;
 }
 /* commit */
@@ -227,7 +228,7 @@ main{
     border: dotted;
     margin-left: 1%;
     background-color: blueviolet;
-    padding: 1%;
+    padding: 0.5%;
     
 }
 .main-display{
@@ -404,7 +405,6 @@ hr{
 .recommend-today{
 }
 .style-footer{/* foooter*/
-    display: flex;
     background-color: white;
     margin-top:1.5%;
 }
