--- a/Tiki.vn/Home/CSS/giohang.css
+++ b/Tiki.vn/Home/CSS/giohang.css
@@ -58,3 +58,181 @@
     width: 160px;
     height: 160px;
 }
+
+.cart-container h2{
+    text-align: left;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    color: rgb(39, 39, 42);
+}
+
+.best-selling-product{
+    margin-left: 3%;
+    font-family:  Helvetica, Arial, sans-serif;
+    background-color: white;
+    border-radius: 10px;
+    height: 92%;
+    width: 89%; 
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.list-box-selling{
+    display: flex;
+    margin-top: 1%;
+}
+
+.box-selling{
+    background-color: white;
+    margin-left: 0.5%;
+    border: solid 0.5px #dadada;
+    border-radius: 5%;
+    width: 16%;
+    height: 400px;
+    text-align: left;
+    gap: 8px;
+}
+
+.link-box-item-selling{
+    text-decoration: none;
+}
+
+.img-of-box-selling{
+    height: 49%;
+}
+
+.div-info-selling{
+    height: 62%;
+    margin-left: 2%;
+}
+
+.icon-star-feedback-selling{
+    display: flex;
+}
+
+.icon-star-rate-selling{
+    width: 15px;
+    height: 15px;
+}
+
+.info-item-selling{
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+    height: 65px;
+}
+
+.description-item-selling{
+    height: 100%;
+    display: -webkit-box;
+    max-height: 3.2rem;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    -webkit-line-clamp: 2;
+    line-height: 1.6rem;
+}
+
+.cost-item-selling{
+    height: 32%;
+    margin-top: 3%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sale-off-item-selling{
+    background-color: rgb(241, 241, 241);
+    border-radius: 5px;
+    font-size: 90%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: black;
+}
+
+.cost-item-after-selling{
+    color: #ff5762;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+.cost-item-before-selling{
+    font-size: 85%;
+    color: #acaaaa;
+}
+
+.some-img-of-box-selling{
+    border-radius: 10px;
+    position: absolute;
+    width: 207px;
+    height: 200px;
+    display: flex;
+}
+
+.info-of-box-selling{
+    position: absolute;
+}
+
+.img-top-deal-selling{
+    width: 20%;
+}
+
+.link-top-deal-selling{
+    color: #0071ff;
+    margin-top: 1%;
+    text-decoration: none;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    float: right;
+}
+
+.logo-now-selling{
+    display: flex;
+    margin-left: 1%;
+}
+hr{
+    color: rgb(247, 247, 247);
+
+}
+.img-logo-now-selling{
+    width: 35px;
+}
+
+.text-logo-now-selling{
+    font-size: 75%;
+    font-size: 70%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: grey;
+    margin-top: 3%;
+}
+
+.best-selling-product h2{
+    padding-top: 10px;
+    padding-left: 10px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    color: rgb(39, 39, 42);
+}
+
+.button-box-selling button{
+    border-radius: 15px;
+    font-size: 15px;
+    background-color: white;
+    border: solid 1px gray;
+    padding: 8px;
+    margin: 5px;
+}
+
+.fix-cart h2{
+    padding-top: 10px;
+    padding-left: 10px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 150%;
+    color: rgb(39, 39, 42);
+}
+
+.cart-container-care{
+    background-color: #ffffff;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
