--- a/Tiki.vn/Home/CSS/footer.css
+++ b/Tiki.vn/Home/CSS/footer.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     border: solid 1px white;
     font-family: Inter, Helvetica, Arial, sans-serif;
-    margin-left: 21%;
+    /* margin-left: 21%; */
 }
 
 .hidden-block{
@@ -133,4 +133,72 @@
 
 .product-column{
     width: fit-content;
+}
+
+.style-footer{/* foooter*/
+    background-color: white;
+    margin-top:1.5%;
+}
+.footer-information{
+    display: flex;
+    width: 100%;
+    height: 25%;
+}
+.style1{
+    border: dotted;
+    display: flex;
+    width: 60%;
+}
+.std-hotline{
+    color: black;
+}
+.block{
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 80%;
+    width: 17.5%;
+}
+.more-information{
+    margin-top: 7%
+}
+.text-block{
+    font-size: 120%;
+}
+.list-link {
+    height: 150%;
+    color: gray;
+    text-decoration: none;
+}
+.email-hotline{
+    text-decoration: none;
+    color: gray;
+}
+.icon-connect{
+    display: flex;
+    width: 8%;
+}
+.img-tikinow{
+    width: 50%;
+}
+.logo-contact{
+    display: flex;
+}
+.list-logo1{
+    width: 40%;
+}
+.list-logo2{
+    width: 250%;
+    margin-left: -70px;
+}
+.list-logo3{
+    width: 80%;
+}
+.icon-install{
+    display: flex;
+}
+.logo-connect{
+    width: 14%;
+}
+.icon-connect{
+    width: 80%;
 }
