--- a/Tiki.vn/Home/CSS/giohang.css
+++ b/Tiki.vn/Home/CSS/giohang.css
@@ -1,17 +1,21 @@
-.box-shopping-cart{
+.box-shopping-cart1{
     width: 100%;
+    background-color: #F5F5FA;
 }
 
 .grid{
-    background-color: #F5F5FA;
+
+    width: 1460px;
+    margin: auto;
+}
+
+.footer-box{
     width: 1260px;
     margin: auto;
 }
 
-
 .box-shopping-cart{
     background-color: #f7f7f7;
-
 }
 
 .content-shopping-cart {
@@ -172,7 +176,7 @@
 .some-img-of-box-selling{
     border-radius: 10px;
     position: absolute;
-    width: 207px;
+    width: 180px;
     height: 200px;
     display: flex;
 }
@@ -197,6 +201,7 @@
     display: flex;
     margin-left: 1%;
 }
+
 hr{
     color: rgb(247, 247, 247);
 
@@ -247,3 +252,4 @@ hr{
     height: 100%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
