--- a/Tiki.vn/Home/CSS/giohang.css
+++ b/Tiki.vn/Home/CSS/giohang.css
@@ -253,3 +253,225 @@ hr{
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.freeship{
+    height: 50px;
+    background-color: #f0fef4;
+}
+.text{
+    padding-top: 0.9%;
+    font-family: arial;
+    font-size: 75%;
+    text-align: center;
+    color: #16b365;
+}
+#FS{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #1670ff;
+    font-size: 110%;
+}
+#xtra{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #0daf5ed8;
+    font-size: 110%;
+}
+.container-menu{
+    display: flex;
+    height: 20%;
+}
+/* style header */
+.home-logo{  /* dinh dang div logo home */
+    position: relative;
+    width: 8%;
+    text-align: center;
+    margin-left: 13%;
+}
+.home-logo #logo{  /* dinh dang kich thuoc cua logo home*/
+    width: 85%;
+}
+.home-logo #text{ /* dinh dang text cua logo home*/
+    font-family: Arial, Helvetica, sans-serif;
+    color: #0d48a6;
+}
+/* Thanh tìm kiếm */
+.container-search{
+    width: 80%;
+}
+.icon-search{     /* kich thuoc icon search */
+    padding-top: 1%;
+    padding-left: 2%;
+    width: 2.5%;
+    height: 55%;
+}
+.input-search{
+    border: none;
+    width: 80%;
+}
+.button-search{  /* dinh dang nut tim kiem*/
+    width: 1%;
+    border: none;
+    background-color: white;
+    border-left: solid 0.4px rgb(224, 224, 224);
+    text-align: center;
+    padding-left: 2.5%;
+}
+.link-search{  /*dinh dang text cua nut search */
+    text-decoration: none;
+    text-align: center;
+    color: #1670ff;
+    font-size: 90%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-top: 1%;
+}
+.middle-container{  /* dinh dang div o tren*/
+    margin-left: 1%;
+    position: absolute;
+    display: flex;
+    width: 70%;
+    height: 4%;
+    margin-top: 15px;
+}
+.search{ /*chieu dai cua thanh tim kiem*/
+    display: flex;
+    width: 66%;
+    height: 120%;
+    border: solid 0.5px rgb(224, 224, 224);
+    border-radius: 10px;
+}
+.menu-shortcut{  /* dinh dang div cua thanh chuc nang*/
+    display: flex;
+    margin-left: 1%;
+}
+.shortcut-home{ /*dinh dang chuc nang nut trang chu */
+    border: solid 0px;
+    border-radius: 10px;
+    display: flex;
+    width: 150px;
+    padding: 2%;
+    margin-left: 10%;
+}
+.shortcut-home:hover{
+    background-color: #e0ecff;
+}
+.icon-home{  /* dinh dang icon home*/
+    width: 25%;
+    height: 130%;
+}
+.link-shortcut-home{  /* dinh dang text */ 
+    color: #0071ff;
+    text-align: justify;
+    text-decoration: none;
+    margin-left: 5%;
+    font-size: 110%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.shortcut-user{ /*dinh dang nut tai khoan */
+    display: flex;
+    border: solid 0px;
+    border-radius: 10px;
+    width: 50%;
+    padding: 2%;
+}
+.icon-user{ /* dinh dang icon*/
+    width: 23%;
+    height: 120%;
+}
+.shortcut-user:hover{
+    background-color: #e5e5e5;
+}
+.link-shortcut-user{/* dinh dang text */ 
+    text-align: justify;
+    color: rgb(167, 166, 166);
+    text-decoration: none;
+    margin-left: 5%;
+    font-size: 110%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.shortcut-shoppingcart{ /* dinh dang nut gio hang*/
+    border-radius: 10px;
+    margin-top: 1%;;
+    padding-left: 5px;
+    height: 90%;
+    display: flex;
+}
+.shortcut-shoppingcart:hover{
+    background-color: #e0ecff;
+}
+.icon-card{
+    width: 90%;
+}
+.number{
+    display: flex;
+    background-color: red;
+    border:5px solid red ;
+    border-radius: 200px;
+    width: 3%;
+    height: 10%;
+}
+/*bottom header*/
+.bottom-container{
+    position: absolute;
+    display: flex;
+    margin-top: 3.5%;
+    width: 100%;
+}
+.list-recommend{
+    width: 60%;
+    height: 5%;
+}
+.link-recommend{
+    width: 60%;
+    height: 30px;
+    text-decoration: none;
+    color: gray;
+    font-family:  Arial, Helvetica, sans-serif;
+    font-size: 90%;
+    padding-left: 1%;
+}
+.location{
+    display: flex;
+    width: 500px;
+    height: 40px;
+    margin-left: 20%;
+    color: black;
+}
+.img-location{
+    width:22px;
+    height: 22px;
+    text-decoration: underline;
+    color: black;
+}
+.text-location{
+    color: gray;
+}
+.link-address{
+    font-size: 90%;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+}
+/* commit */
+.commit{
+    font-size: 90%;
+    display: flex;
+    height: 5%;
+    width: 100%;
+    padding-left: 10%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.list-commit{
+    margin-left: 3%;
+    border-left: solid grey 0.5px ;
+    padding-left: 20px;
+}
+.list-commit-first{
+    margin-left: 3%;
+    padding-left: 20px;
+}
+.img-commit{
+    width: 20px;
+}
+
+.Button_cart:active {
+    background-color: white; 
+    color: blue; 
+    border: 2px solid blue;
+}
