--- a/Tiki.vn/Home/CSS/footer.css
+++ b/Tiki.vn/Home/CSS/footer.css
@@ -3,6 +3,7 @@
     border: solid 1px white;
     font-family: Inter, Helvetica, Arial, sans-serif;
     /* margin-left: 21%; */
+    margin: 1%;
 }
 
 .hidden-block{
