--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -335,14 +335,17 @@ main{/* Main */
     overflow: hidden;
 }
 .main-display{
+    overflow: hidden;
+}
+.slides-show{
+    background-color: white;
+    border-radius: 10px;
 }
 .slide-items{
+    transition: 0.5s;
     position: relative;
-    overflow: hidden;
     display: flex;
     height: 300px;
-    background-color: rgb(243, 0, 0);
-    border-radius: 20px;
 }
 .img-slide{
     width: 550px;
@@ -351,17 +354,42 @@ main{/* Main */
     margin-left: 15px;
 }
 .block-slide-items{
-    background-color: yellow;
     width: 100%;
     display: flex;
 }
 .buttons-slide{
+    display: none;
+    margin-left: 15px;
     position: absolute;
-    background-color: red;
-    top:45%;
-    left: 15%;
+    top: 39%;
+}
+.buttons-slide #prev, #next{
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 15px;
+    color: #0071ff;
+    background-color: white;
+    width: 31px;
+    height: 30px;
+    border: solid 0px  gray;
+    border-radius: 50%;
+}
+.buttons-slide  #next{
+    background-color: yellow;
+}
+.dots{
+    margin-left: 45%;
+    width: 100px;
+    left: 50%;
+    padding: 0;
+    list-style: none;
     display: flex;
-    justify-content: space-between;
+}
+#dots-slide-first ,#dots-slide-second,#dots-slide-third{
+    margin-left: 5px;
+    background-color: rgb(174, 173, 173);
+    width: 30px;
+    height: 5px;
+    border-radius: 5px;
 }
 .list-event{
     display: flex;
@@ -671,8 +699,6 @@ hr{
 }
 .text-header-maybe-your-like{
     font-family: Arial, Helvetica, sans-serif;
-}
-.recommend-today{
 }
 .style-footer{/* foooter*/
     background-color: white;
