--- a/Tiki.vn/Home/CSS/footer_branch.css
+++ b/Tiki.vn/Home/CSS/footer_branch.css
@@ -3,9 +3,10 @@
     margin-top:1.5%;
 }
 .footer-information{
+    margin-left: 10%;
     padding: 15px;
     display: flex;
-    width: 100%;
+    width: 87%;
     height: 25%;
 }
 .style1{
@@ -54,7 +55,7 @@
     width: 40%;
 }
 .list-logo2{
-    width: 250%;
+    width: 230%;
     margin-left: -70px;
 }
 .list-logo3{
@@ -70,6 +71,7 @@
     width: 80%;
 }
 .footer-after{
+    width: 75%;
     padding: 10px;
     box-sizing: border-box;
     border: solid 1px white;
@@ -77,16 +79,12 @@
 }
 
 .hidden-block{
-    margin-left: 0px;
-    margin-right: 0px;
+    width: 90%;
     background-color: white;
-    width: 80%;
-   
 }
 .separator{
     border-bottom: 1px solid #e0e0e0;
-    margin:0 0 ;
-    width: 1100px;
+    width: 1500px;
     padding-bottom: 14px;
 }
 
@@ -116,7 +114,6 @@
     color: rgb(56, 56, 61);
     margin-bottom: 12px;
     margin-top: 0px;
-
 }
 .slogan h2{
     font-size: 14px;
@@ -126,7 +123,6 @@
     margin-top: 0px;
     color: rgb(128, 128, 137);
 }
-
 .slogan h1{
     font-size: 16px;
     line-height: 24px;
@@ -135,7 +131,6 @@
     margin-bottom: 12px;
     margin-top: 0px;
 }
-
 .prominent-brand h2{
    font-size: 16px;
     line-height: 24px;
@@ -144,25 +139,19 @@
     margin-bottom: 12px;
     margin-top: 0px;
 }
-
-
 .hidden-block .changes-color a{
     font-size: 12px;
     color:rgb(128,128,137);
 }
-
-
 .slogan{
     margin-bottom: 0px 0px 10px;
 }
-
 .create-product-column{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     column-gap: 20px;
     width: fit-content;
 }
-
 .product-catalog h2{
     font-size: 16px;
     line-height: 24px;
@@ -171,7 +160,6 @@
     margin-bottom: 12px;
     margin-top: 0px;
 }
-
  .types-of-products a{
     font-size: 12px;
     line-height: 16px;
@@ -179,19 +167,16 @@
     margin-bottom: 12px;
     margin-top: 0px;
 }
-
 .title-product a{
     font-size: 14px;
     line-height: 16px;
     font-weight: 500;
     color: rgb(128, 128, 137);
 }
-
 .product-block {
     margin-bottom: 14px;
     margin-top: 0px;
 }
-
 .title-product p{
     font-size: 14px;
     line-height: 2px;
@@ -199,7 +184,6 @@
     color: rgb(128, 128, 137);
     margin: auto;
 }
-
 .product-column{
     width: fit-content;
 }
