--- a/Tiki.vn/Home/CSS/signup.css
+++ b/Tiki.vn/Home/CSS/signup.css
@@ -7,9 +7,10 @@
     margin-right: 20%;
     position: relative;
     z-index: 2;
+    width: 50%;
 }
 .left{
-    margin-right: 20%;
+    width: 100%;
 }
 .right{
     background-color: white;
@@ -20,14 +21,13 @@
     border-top-right-radius: 10px;
 }
 .img-tiki{
-    width: 190%;
+    width: 100%;
     border-top-left-radius:  10px;
     border-bottom-left-radius: 10px;
 }
 input {
     height: 30px;
-    border-radius: 10px;
-    
+    border: none;
     margin-top: 20px;
 }
 
@@ -35,14 +35,19 @@ input {
     display: flex;
 }
 .big-title{
+    color: #1ba8ff;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: -10px;
 }
 .title{
+    color: #1ba8ff;
     margin-top: 30px;
 }
 .password{
+    display: flex;
+}
+.comfirm-password{
     display: flex;
 }
 .gmail{
@@ -55,28 +60,37 @@ input {
     display: flex;
 }
 .select-nation{
+    width:300px;
     margin-top: 24px;
     margin-left: 103px;
     height: 30px;
-    border-radius: 10px;
     padding-right: 42px;
     border: solid 1px gray;
 }
 .ip-name{
+    width:300px;
     margin-left: 100px ;
-    border: solid 1px gray;
+    border-bottom: solid 1px gray;
 }
 .ip-pass{
+    width:300px;
     margin-left: 72px ;
-    border: solid 1px gray;
+    border-bottom: solid 1px gray;
+}
+.ip-comfirm-pass{
+    width:300px;
+    margin-left: 72px ;
+    border-bottom: solid 1px gray;
 }
 .ip-email{
+    width:300px;
     margin-left: 105px ;
-    border: solid 1px gray;
+    border-bottom: solid 1px gray;
 }
 .ip-pn{
+    width:300px;
     margin-left: 35px;
-    border: solid 1px gray;
+    border-bottom: solid 1px gray;
 }
 body{
     background-image: url('/Tiki.vn/Home/IMG/img-signup_signin/background.jpg');
