--- a/Tiki.vn/Home/CSS/style.css
+++ b/Tiki.vn/Home/CSS/style.css
@@ -26,7 +26,6 @@
     border-radius: 5px;
 }
 .box-item-sidebar:hover{
-    background-color: #d9d7d7;
 }
 .header-list-sidebar{
     padding-top: 5%;
@@ -80,10 +79,12 @@ main{/* Main */
     height: 300px;
 }
 .img-slide{
-    width: 550px;
+    width: 600px;
     height: 300px;
     border-radius: 3%; 
+    margin-right: 15px;
     margin-left: 15px;
+    background-color: red;
 }
 .block-slide-items{
     width: 100%;
@@ -160,7 +161,7 @@ main{/* Main */
 .list-top-deal{/* muc top-deal */
     background-color: white;
     border-radius: 15px;
-    height: 400px;
+    height: 420px;
     margin-top: 2%;
     padding: 1%;
 }
@@ -177,7 +178,7 @@ main{/* Main */
     margin-left: 0.5%;
     border: solid 0.5px #dadada;
     border-radius: 5%;
-    width: 180px;
+    width: 200px;
     height: 350px;
 }
 .link-box-item{
@@ -188,7 +189,8 @@ main{/* Main */
     height: 49%;
 }
 .div-info{
-    height: 50%;
+    margin-top: 10px;
+    height: 47%;
     margin-left: 2%;
 }
 .icon-star-feedback{
@@ -238,8 +240,8 @@ main{/* Main */
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     position: absolute;
-    width: 179px;
-    height: 171px;
+    width: 195px;
+    height: 191px;
 }
 .info-of-box{
     position: absolute;
@@ -273,7 +275,7 @@ hr{
 .item-your-care{/* muc san pham ban quan tam*/
     background-color: white;
     border-radius: 15px;
-    height: 400px;
+    height: 420px;
     margin-top: 2%;
     padding: 1%;
 }
@@ -400,8 +402,8 @@ hr{
 .img-brand{
     border-radius: 10px;
     margin-left: 18px;
-    height: 243px;
-    width: 166px;
+    height: 263px;
+    width: 190px;
 }
 .items-foreign{
     background-color: white;
@@ -420,24 +422,24 @@ hr{
     margin-top: 20px;
     border-radius: 10px;
     background-color:white;
-    height: 390px;
+    height: 420px;
     padding-top: 5px;
 }
 .list-items-sale-off{
     margin-top: 15px;
     display: flex;
-    height: 170px;
+    height: 190px;
 }
 .item-sale-off{
     margin-left: 13px;
     border-radius: 10px;
-    width: 174px;
-    height: 170px;
+    width: 194px;
+    height: 190px;
 }
 .maybe-your-like{/* muc ban co the thich*/
     background-color: white;
     border-radius: 15px;
-    height: 400px;
+    height: 420px;
     margin-top: 2%;
     padding: 1%;
 }
@@ -516,16 +518,16 @@ hr{
     display: grid;
     grid-template-columns: auto auto auto auto auto auto;
     grid-template-rows:  360px 360px 360px 360px 360px;
-    column-gap: 5px;
-    row-gap: 5px;
+    column-gap: 6px;
+    row-gap: 15px;
 }
 .box{
     background-color: white;
     margin-left: 0.5%;
     border: solid 0.5px #dadada;
     border-radius: 5%;
-    width: 180px;
-    height: 350px;
+    width: 200px;
+    height: 370px;
 }
 .width-logo-og-big-box{
     padding-top: 20px;
@@ -540,8 +542,8 @@ hr{
     margin-left: 0.5%;
     border: solid 0.5px #dadada;
     border-radius: 5%;
-    width: 360px;
-    height: 350px;
+    width: 400px;
+    height: 370px;
 }
 .block-big-box-item-2{
     grid-column: 4/6;
@@ -550,15 +552,15 @@ hr{
     margin-left: 0.5%;
     border: solid 0.5px #dadada;
     border-radius: 5%;
-    width: 360px;
-    height: 350px;
+    width: 380px;
+    height: 370px;
 }
 .big-box-item{ /*danh dang form san pham lon*/
     background-color: white;
     margin-left: 0.5%;
     border-radius: 5%;
-    width: 360px;
-    height: 350px;
+    width: 400px;
+    height: 370px;
 }
 .logo-brand-item{
     background-image: linear-gradient(180deg,#e2ecfe,#CECFCF);
